--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "@prisma/client": "2.17.0",
     "apollo-server": "^2.21.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "mongoose": "^5.9.15",
     "node-fetch": "^2.6.1",
+    "prisma": "2.17.0",
     "webtorrent": "^0.108.3"
   }
 }
